<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="375dp"
    android:layout_height="812dp"
    tools:context=".SignUpScreen"
    android:background="@drawable/layouts"
    >
    <RelativeLayout
        android:id="@+id/frame_start"
        android:layout_width="264dp"
        android:layout_height="127dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="16dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="21dp"
        android:background="@drawable/frame_start"
        >
        <ImageView
            android:id="@+id/arrow_left"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="12.46dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="7.29dp"
            android:background="@drawable/ic_baseline_arrow_back_24"
            />
        <RelativeLayout
            android:id="@+id/heading"
            android:layout_width="264dp"
            android:layout_height="77dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="50dp"
            >

            <TextView
                android:id="@+id/let_s_start"
                android:layout_width="264dp"
                android:layout_height="51dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center_horizontal|top"
                android:text="@string/let_s_start"
                android:textAppearance="@style/let_s_start" />
        <TextView
            android:fontFamily="@font/poppins_medium"
            android:id="@+id/fill_in_you"
            android:layout_width="249dp"
            android:layout_height="26dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="51dp"
            android:text="@string/fill_in_you"
            android:textAppearance="@style/fill_in_you"
            android:gravity="top"
            />

    </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/registration"
        android:layout_width="343dp"
        android:layout_height="222dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="14dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="170dp"
        android:background="@drawable/registration"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="343dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/notificatio"
                android:orientation="vertical"
                >
                <TextView
                    android:fontFamily="@font/poppins_medium"
                    android:id="@+id/fullname"
                    android:layout_width="47dp"
                    android:layout_height="14dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="17dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="8dp"
                    android:text="@string/fullname"
                    android:textAppearance="@style/fullname"
                    android:gravity="center_horizontal|top"/>

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="77dp"
                    android:layout_height="26dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center_horizontal|top"
                    android:text="@string/user_name"
                    android:textAppearance="@style/user_name" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="343dp"
            android:layout_height="60dp"
            android:layout_marginTop="82dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/notificatio"
                android:orientation="vertical"
                >
                <TextView
                    android:fontFamily="@font/poppins_medium"
                    android:id="@+id/mail"
                    android:layout_width="47dp"
                    android:layout_height="14dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="17dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="8dp"
                    android:text="@string/mail"
                    android:textAppearance="@style/mail"
                    android:gravity="center_horizontal|top"/>

                <TextView
                    android:id="@+id/user_mail"
                    android:layout_width="250dp"
                    android:layout_height="26dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center_horizontal|top"
                    android:text="@string/user_mail"
                    android:textAppearance="@style/user_mail" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_marginTop="164dp"
            android:layout_width="343dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/notificatio"
                android:orientation="vertical">

                <TextView
                    android:fontFamily="@font/poppins_medium"
                    android:id="@+id/password"
                    android:layout_width="49dp"
                    android:layout_height="20dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="16dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="11dp"
                    android:text="@string/password"
                    android:textAppearance="@style/password"
                    android:gravity="center_horizontal|top"/>

                <TextView
                    android:id="@+id/user_password"
                    android:layout_width="120dp"
                    android:layout_height="25dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center_horizontal|top"
                    android:text="@string/user_password"
                    android:textAppearance="@style/user_mail"
                    android:inputType="textPassword"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/frame_signupButtons"
        android:layout_width="343dp"
        android:layout_height="232dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="16dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="414dp"
        android:background="@drawable/frame_signup">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_sign"
            android:layout_width="343dp"
            android:layout_height="58dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/btn_sign"
            android:text="@string/sign_up"
            android:textAppearance="@style/sign_up"
            android:gravity="center"
            android:fontFamily="@font/poppins_medium"
            />
        <TextView
            android:fontFamily="@font/poppins_medium"
            android:id="@+id/or"
            android:layout_width="18dp"
            android:layout_height="26dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="162.5dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="68dp"
            android:text="@string/or"
            android:textAppearance="@style/or"
            android:gravity="center_horizontal|top"/>
        <androidx.cardview.widget.CardView
            android:id="@+id/crd_facebook"
            android:layout_marginTop="104dp"
            android:layout_width="343dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            >
            <LinearLayout
                android:background="@drawable/facebook"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_marginTop="18dp"
                    android:layout_marginLeft="21dp"
                    android:layout_marginBottom="18dp"
                    android:id="@+id/group"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:background="@drawable/faceico"/>
                <TextView
                    android:fontFamily="@font/poppins_medium"
                    android:id="@+id/connect_wit"
                    android:layout_width="205dp"
                    android:layout_height="26dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="24dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="17dp"
                    android:text="@string/connect_wit"
                    android:textAppearance="@style/connect_wit"
                    android:gravity="center_horizontal|top"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/crd_google"
            android:layout_marginTop="174dp"
            android:layout_width="343dp"
            android:layout_height="58dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            >
            <LinearLayout
                android:background="@drawable/google"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_marginTop="18dp"
                    android:layout_marginLeft="21dp"
                    android:layout_marginBottom="18dp"
                    android:id="@+id/google"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:background="@drawable/icon_google"/>
                <TextView
                    android:fontFamily="@font/poppins_medium"
                    android:id="@+id/connect_wit_google"
                    android:layout_width="205dp"
                    android:layout_height="26dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="24dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="17dp"
                    android:text="@string/connect_wit_g"
                    android:textAppearance="@style/connect_wit_g"
                    android:gravity="center_horizontal|top"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
    <TextView
        android:fontFamily="@font/poppins_medium"
        android:id="@+id/by_signing_"
        android:layout_width="329dp"
        android:layout_height="55dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="23dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="668dp"
        android:text="@string/by_signing_"
        android:textAppearance="@style/by_signing_"
        android:gravity="center_horizontal|top"
        />
    <View
        android:id="@+id/home_indica"
        android:layout_width="134dp"
        android:layout_height="3dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="9dp"
        android:background="@drawable/home_indica"
        />
</RelativeLayout>